# src/dtos/vacancies_dto.go
@@ -1,9 +1,12 @@
 package dtos
 
-type Job struct {
-	Id          string `json:"id"`
-	Titulo      string `json:"titulo"`
-	Descricao   string `json:"descricao"`
-	Localizacao string `json:"localizacao"`
-	PostedAt    string `json:"posted:"`
+type Vacancies struct {
+	Id           string   `json:"id"`
+	Title        string   `json:"title"`
+	Description  string   `json:"description"`
+	Area         string   `json:"are"`
+	Category     string   `json:"type"`
+	Location     string   `json:"location"`
+	Requirements []string `json:"requirements"`
+	PostedAt     string   `json:"posted:"`
 }
